# libgif

./: .gitignore  CMakeLists.txt  README.md
include/gif/: array_view.h  bit_stream.h  gif.h  lzw.h
src/: CMakeLists.txt  bit_stream.cpp  lzw.cpp  parser.cpp
test/: CMakeLists.txt  main.cpp
